--- a/prova1/web1-prova1-master/style.css
+++ b/prova1/web1-prova1-master/style.css
@@ -4,10 +4,16 @@ header{ /* header preto superior*/
     padding: 1.8rem;
   }
 
-nav{
+  nav {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 2rem;
+}
+
+.botoes {
+    display: flex;
+    gap: 1rem;
 }
 
 .titulo{
@@ -68,14 +74,10 @@ nav{
     align-items: center;
 }
 
-.heading{ /*titulo*/
+.heading{ /*titulo em cima da barra de pesquisa*/
     margin-bottom: 1rem;
-}
-
-@media(min-width: 1024px){
-    .heading{
-        font-size: 7cqw;
-    }
+    font-size: 4rem;
+    font-family: 'GT America Standard', sans-serif;
 }
 
 .barra-procura{ /* barra de pesquisa*/
@@ -102,25 +104,46 @@ nav{
     cursor: pointer;
 }
 
-
 .features { /* Estilos para a seção de funcionalidades e suas imagens */
-    padding: 8rem;
+    padding: 8rem 2rem; /* Adiciona espaçamento lateral */
     background-color: #fff;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    text-align: center;
     font-size: 1.5rem;
 }
 
-.feature-img {
+.feature-item {
+    display: flex;
+    align-items: flex-start; /* Alinha a imagem e o texto no topo */
+    gap: 1rem; /* Espaço entre a imagem e o texto */
+    text-align: left;
+}
+
+.feature-text h3 {
+    font-size: 1.9rem;
+    font-weight: bold;
+    margin: 0; /* Remove qualquer margem extra ao redor do título */
+}
+.feature-text p {
+    font-size: 1.7rem;
+}
+
+.feature-img{
     width: 90px;
     height: auto;
-    margin-right: 10px; /* espaço entre a imagem e o texto */
-  }
+}
 
-.feature-item {
-    margin: 1rem 0;
+.feature.text{
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.learn-more {
+    color: #4C5FD5;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 0.5rem;
 }
 
 /* Estilo para o rodapé */
@@ -130,6 +153,9 @@ footer {
     padding: 2rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 12px;
+    gap: 2rem;
 }
 
 .rodape img{ /* ajustar o tamanho da logo pq tava gigante*/
@@ -139,17 +165,38 @@ footer {
 
 .footer-features {
     display: flex;
-    gap: 2rem; /* Espaço entre as features */
+    gap: 4rem;
     flex-wrap: wrap;
-}
-
-.feature-item h3 {
-    font-size: 1.2rem;
-    margin: 0;
 }
 
 .footer-copyright {
     color: white;
     font-size: 0.8rem;
     text-align: left;
-  }
+}
+
+@media (max-width: 768px) { /*media querry para otimiuzacao em telas menores*/
+    nav {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .titulo_secundario {
+        padding: 1rem;
+    }
+
+    .features {
+        padding: 4rem 1rem;
+    }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer-features {
+        flex-direction: column;
+        align-items: center;
+    }
+}
